--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -37,7 +37,7 @@
         android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/image_id"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
+        android:paddingBottom="5dp"
         android:textSize="12sp"
         android:id="@+id/message"/>
 
