--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#302e2f">
 
     <org.appspot.apprtc.PercentFrameLayout
         android:id="@+id/remote_video_layout"
@@ -197,6 +198,11 @@
         android:layout_height="match_parent" />
     <FrameLayout
         android:id="@+id/call_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <FrameLayout
+        android:id="@+id/chat_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
     <FrameLayout
