--- a/app/src/main/res/layout/calllist_active_row.xml
+++ b/app/src/main/res/layout/calllist_active_row.xml
@@ -11,7 +11,6 @@
         android:layout_height="64dp"
         android:id="@+id/image_id"
         android:layout_margin="5dp"
-        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:src="@drawable/ic_person_white_48dp"
         android:tint="#888"
@@ -28,7 +27,6 @@
         android:layout_margin="5dp"
         android:layout_toRightOf="@+id/image_id"
         android:layout_toLeftOf="@+id/action_image"
-        android:layout_centerVertical="true"
         android:textSize="20sp"
         android:id="@+id/text_id"/>
 
@@ -81,63 +79,59 @@
         android:textSize="14sp"
         android:id="@+id/connection_time"/>
 
-    <ImageView
+    <com.github.clans.fab.FloatingActionButton
         android:id="@+id/button_call_toggle_video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_visibility_white_24dp"
         android:layout_alignParentBottom="true"
-        android:tint="#757575"
-        android:clickable="true"
+        android:src="@drawable/ic_visibility_white_24dp"
+        style="@style/CallListActionButtonStyle"
         android:layout_toLeftOf="@+id/connection_time"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="3dp"/>
 
-    <ImageView
+    <com.github.clans.fab.FloatingActionButton
         android:id="@+id/button_call_toggle_mic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_mic_white_24dp"
         android:layout_alignParentBottom="true"
-        android:tint="#757575"
-        android:clickable="true"
+        android:src="@drawable/ic_mic_white_24dp"
+        style="@style/CallListActionButtonStyle"
         android:layout_toLeftOf="@+id/button_call_toggle_video"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="3dp"/>
 
-    <ImageView
+
+    <com.github.clans.fab.FloatingActionButton
         android:id="@+id/button_send_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:src="@drawable/ic_textsms_white_24dp"
-        android:layout_alignParentBottom="true"
-        android:tint="#757575"
-        android:clickable="true"
+        style="@style/CallListActionButtonStyle"
         android:layout_toLeftOf="@+id/button_call_toggle_mic"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="3dp"/>
 
-    <ImageView
+    <com.github.clans.fab.FloatingActionButton
         android:id="@+id/button_send_file"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_library_books_black_48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:tint="#757575"
-        android:clickable="true"
+        android:src="@drawable/ic_library_books_white_24dp"
+        style="@style/CallListActionButtonStyle"
         android:layout_toLeftOf="@+id/button_send_message"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="3dp"/>
 
-    <ImageView
+    <com.github.clans.fab.FloatingActionButton
         android:id="@+id/button_hangup"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/ic_call_end_white_24dp"
-        android:layout_alignParentBottom="true"
-        android:tint="#757575"
-        android:clickable="true"
-        android:layout_toLeftOf="@+id/button_send_file"
+        style="@style/EndCallSmlButtonStyle"
+        android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="3dp"/>
+        android:layout_centerVertical="true"/>
+
 </RelativeLayout>
