--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -55,6 +55,15 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="90dp"/>
 
+    <com.github.clans.fab.FloatingActionButton
+        android:id="@+id/button_goto_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/MenuButtonsStyle"
+        android:src="@drawable/ic_textsms_white_24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="90dp"/>
+
     <RelativeLayout
            android:id="@+id/buttons_call_container"
            android:orientation="horizontal"
