--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,8 +54,28 @@
     <item name="fab_colorRipple">#55eeeeee</item>
   </style>
 
+  <style name="CallListActionButtonStyle">
+    <item name="fab_size">mini</item>
+    <item name="fab_showAnimation">@anim/jump_from_down</item>
+    <item name="fab_hideAnimation">@anim/jump_to_down</item>
+    <item name="fab_shadowColor">#00000000</item>
+    <item name="fab_colorNormal">#00afce</item>
+    <item name="fab_colorPressed">#2272CD</item>
+    <item name="fab_colorRipple">#62B2FF</item>
+  </style>
+
   <style name="EndCallButtonStyle">
     <item name="fab_size">normal</item>
+    <item name="fab_showAnimation">@anim/jump_from_down</item>
+    <item name="fab_hideAnimation">@anim/jump_to_down</item>
+    <item name="fab_shadowColor">#00000000</item>
+    <item name="fab_colorNormal">#ff3300</item>
+    <item name="fab_colorPressed">#ff6600</item>
+    <item name="fab_colorRipple">#ff2200</item>
+  </style>
+
+  <style name="EndCallSmlButtonStyle">
+    <item name="fab_size">mini</item>
     <item name="fab_showAnimation">@anim/jump_from_down</item>
     <item name="fab_hideAnimation">@anim/jump_to_down</item>
     <item name="fab_shadowColor">#00000000</item>
