--- a/app/src/main/res/layout/calllist_row.xml
+++ b/app/src/main/res/layout/calllist_row.xml
@@ -45,25 +45,40 @@
         android:textSize="12sp"
         android:id="@+id/message"/>
 
-    <com.github.ybq.android.spinkit.SpinKitView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/connecting_progress"
-        style="@style/SpinKitView.Large.ThreeBounce"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_gravity="center"
-        app:SpinKit_Color="#757575" />
-
-    <ImageView
-        android:id="@+id/action_image"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:tint="#757575"
-        android:layout_centerVertical="true"
-        android:src="@drawable/ic_add_white_24dp"/>
+        android:layout_marginRight="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
+        <com.github.ybq.android.spinkit.SpinKitView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/connecting_progress"
+            style="@style/SpinKitView.Large.ThreeBounce"
+            android:layout_width="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:SpinKit_Color="#757575" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/action_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_add_white_24dp"
+            style="@style/CallListActionButtonStyle"
+            android:layout_marginRight="5dp"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/button_send_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_textsms_white_24dp"
+            style="@style/CallListActionButtonStyle"/>
+    </LinearLayout>
 </RelativeLayout>
