--- a/app/src/main/res/layout/fragment_calllist.xml
+++ b/app/src/main/res/layout/fragment_calllist.xml
@@ -47,4 +47,15 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="90dp"/>
 
+    <com.github.clans.fab.FloatingActionButton
+        android:id="@+id/user_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_videocam_white_24dp"
+        style="@style/CallActionButtonStyle"
+        android:tint="@color/white"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
